better loading message

--- a/BlazorFFT/wwwroot/index.html
+++ b/BlazorFFT/wwwroot/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+    <app>
+        <div style="position:absolute; top:30vh; width:100%; text-align:center">
+            <h1>Blazor Audio FFT</h1>
+            <p>Please wait... The application is loading.</p>
+        </div>
+    </app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
