--- a/BlazorFFT/wwwroot/index.html
+++ b/BlazorFFT/wwwroot/index.html
@@ -7,8 +7,7 @@
     <title>Blazor Audio FFT</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
-    <script src="js/audio1.interop.js"></script>
-    <script src="js/audio2.interop.js"></script>
+    <script src="js/audio.interop.js"></script>
     <script src="js/size.interop.js"></script>
     <script src="js/timer.interop.js"></script>
     <script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
@@ -28,7 +27,6 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-
 </body>
 
 </html>
