--- a/BlazorFFT/wwwroot/index.html
+++ b/BlazorFFT/wwwroot/index.html
@@ -11,6 +11,7 @@
     <script src="js/size.interop.js"></script>
     <script src="js/timer.interop.js"></script>
     <script src="_content/Blazor.Extensions.Canvas/blazor.extensions.canvas.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Space+Mono">
 </head>
 
 <body>
